--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jasmine-ts \"spec/**/*.spec.ts\"",
     "start": "nodemon dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc -p ."
@@ -23,7 +23,9 @@
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "es6-promise": "^4.2.8",
     "express": "^4.18.2",
+    "isomorphic-fetch": "^3.0.0",
     "md5": "^2.3.0",
     "mongoose": "^6.7.1"
   },
