--- a/package.json
+++ b/package.json
@@ -24,27 +24,35 @@
     "body-parser": "^1.20.1",
     "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.6",
-    "cookie-session": "^2.0.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "es6-promise": "^4.2.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "googleapis": "^109.0.1",
+    "i": "^0.3.7",
     "isomorphic-fetch": "^3.0.0",
     "md5": "^2.3.0",
     "mongoose": "^6.7.1",
     "multer": "^1.4.5-lts.1",
-    "passport": "^0.6.0",
+    "npm": "^9.1.2",
+    "passport": "^0.4.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-google-oidc": "^0.1.0"
+    "passport-google-oidc": "^0.1.0",
+    "passport-google-openidconnect": "^0.0.4"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.9",
     "@types/passport": "^1.0.11",
+    "@types/passport-google-oauth2": "^0.1.5",
     "@types/passport-google-oauth20": "^2.0.11",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
